src/resources/snapshots/git_events_runner__resources__trigger__tests__update_trigger_status_last_run-update_w_o_changes.snap
---
source: src/resources/trigger.rs
expression: api.get(name).await.unwrap().status()
---
state: Idle
lastRun: "2024-01-02T03:04:05Z"
