src/resources/snapshots/git_events_runner__resources__trigger__tests__update_trigger_status_sources-update_to_some_value-1.snap
---
source: src/resources/trigger.rs
expression: api.get(name).await.unwrap().status()
---
state: Idle
lastRun: Never
checkedSources:
  source-1:
    commitHash: "1234567890"
    changed: "2024-02-03T04:05:06Z"
