src/resources/snapshots/git_events_runner__resources__trigger__tests__update_trigger_status_state-update_to_Idle.snap
---
source: src/resources/trigger.rs
expression: api.get(name).await.unwrap().status()
---
state: Idle
lastRun: Never
